# ahrs-viewer

./: .gitmodules  CMakeLists.txt  README.md
docs/: doxyfile
include/ahrs_viewer/: ahrs_text_buffer.h  sensor_from_text.h
src/: ahrs_text_buffer.cpp  main.cpp
